--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -1,44 +1,32 @@
- name: pnpm Example Workflow
+name: Github Page
+
 on:
-  push: 
-  branches: [ master]
+  push:
+    branches: [main]
 
- permissions:
-   contents: read
-   pages: write
-   id-token: write
+jobs:
+  build:
+    runs-on: ubuntu-latest
 
- jobs:
-   build:
-    environment:
-    name: github-pages
-  url: ${{steps.deployment.outputs.page_url}}
-runs-on: ubuntu-latest
-
-strategy:
-  matrix:
-    node-version: [18]
-steps:
-  - uses: actions/checkout@v3
-  - uses: pnpm/action-setup@v2
-    with:
-      version: 7
-  - name: Use Node.js ${{ matrix.node-version }}
-    uses: actions/setup-node@v3
-    with:
-      node-version: ${{ matrix.node-version }}
-      cache: pnpm
-  - name: Install dependencies
-    run: pnpm install
-  - name: Build
-    run: pnpm run build
-  - name: Setup Pages
-    uses: actions/configure-pages@v3
-  - name: Upload artifact
-    uses: actions/upload-pages-artifact@v1
-    with:
-      # Upload dist repository
-       path: ./dist
-  - name: Deploy to GitHub Pages
-    id: deployment
-    uses: actions/deploy-pages@v1
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Install Packages
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
+          run_install: true
+      - name: Set Environment Variables
+        env:
+          BASE_PATH: /react-texteditor-example
+        run: |
+          echo "" > .env.local
+          echo BASE_PATH=$BASE_PATH >> .env.local
+      - name: Build
+        run: pnpm run build
+      - name: Create .nojekyll
+        run: touch ./out/.nojekyll
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: out
