--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -1,32 +1,34 @@
-name: Github Page
+name: Build and Deploy
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Install Packages
-        uses: pnpm/action-setup@v2
-        with:
-          version: 8
-          run_install: true
-      - name: Set Environment Variables
-        env:
-          BASE_PATH: /react-texteditor-example
-        run: |
-          echo "" > ./src/env.js
-          echo BASE_PATH=$BASE_PATH >> ./src/env.js
-      - name: Build
-        run: pnpm run build
-      - name: Create .nojekyll
-        run: touch ./out/.nojekyll
-      - name: Deploy
-        uses: SeaUrc/SeaUrc.github.io
-        with:
-          folder: out
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '14'
+
+    - name: Install pnpm
+      run: |
+        npm install -g pnpm
+
+    - name: Install dependencies
+      run: pnpm install
+
+    - name: Build the project
+      env:
+        POSTGRES_URL: ${{ secrets.POSTGRES_URL }}
+      run: pnpm run build
+
+    - name: Run tests
+      run: pnpm test
