--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -20,7 +20,7 @@ jobs:
 
     - name: Install pnpm
       run: |
-        npm install -g pnpm
+        npm install -g pnpm@6.32.11 # A version compatible with Node.js 14
 
     - name: Install dependencies
       run: pnpm install
