--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -16,11 +16,11 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '14'
+        node-version: '18.17.0'
 
     - name: Install pnpm
       run: |
-        npm install -g pnpm@6.32.11 # A version compatible with Node.js 14
+        npm install -g pnpm
 
     - name: Install dependencies
       run: pnpm install
