--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -36,4 +36,6 @@ jobs:
       run: pnpm run build
 
     - name: Run tests
+      env:
+        POSTGRES_URL: ${{ secrets.POSTGRES_URL }}
       run: pnpm test
