--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
+    permissions: 
       contents: write
     steps:
     - name: Checkout repository
@@ -31,8 +31,14 @@ jobs:
         POSTGRES_URL: ${{ secrets.POSTGRES_URL }}
       run: pnpm run build
 
+    - name: Export the static site
+      env:
+        POSTGRES_URL: ${{ secrets.POSTGRES_URL }}
+      run: pnpm run export
+
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./out
+        
