--- a/package.json
+++ b/package.json
@@ -12,35 +12,35 @@
     "start": "next start"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.1.2",
+    "@clerk/nextjs": "^5.7.5",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@vercel/postgres": "^0.8.0",
     "drizzle-orm": "^0.29.5",
-    "geist": "^1.3.0",
-    "next": ">=14.2.25",
-    "postgres": "^3.4.4",
+    "geist": "^1.4.2",
+    "next": "^15.3.2",
+    "postgres": "^3.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
-    "zod": "^3.23.8"
+    "zod": "^3.24.4"
   },
   "devDependencies": {
-    "@types/eslint": "^8.56.10",
-    "@types/node": "^20.12.12",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.10.0",
-    "@typescript-eslint/parser": "^7.10.0",
+    "@types/eslint": "^8.56.12",
+    "@types/node": "^20.17.46",
+    "@types/react": "^18.3.21",
+    "@types/react-dom": "^18.3.7",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
     "drizzle-kit": "^0.21.4",
-    "eslint": "^8.57.0",
-    "eslint-config-next": ">=14.2.25",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^15.3.2",
     "eslint-plugin-drizzle": "^0.2.3",
-    "pg": "^8.11.5",
-    "postcss": "^8.4.38",
-    "prettier": "^3.2.5",
+    "pg": "^8.16.0",
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.5.14",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.5"
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.8.3"
   },
   "ct3aMetadata": {
     "initVersion": "7.33.1"
